# procurve-cli

./: .editorconfig  Cargo.toml  Makefile  README.md  bors.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
rust/src/cmd/: show.rs
rust/src/model/: description.rs  mod.rs  vlan.rs
samples/: SysDescription.html  VLANPortParticipation.html  VlanCreateConfig.html
src/: lib.rs
src/cmd/: show.rs
