[package]
name = "procurve_cli"
version = "0.1.0"
edition = "2018"
authors = ["Brad Fritz <github@bfritz.com>"]
license = "MIT"
description = "Command line client for HP ProCurve 1810G network switches"

[dependencies]
anyhow = "1.0"
clap = "2"
reqwest = { version = "0.11", features = ["blocking", "cookies", "multipart"] }
scraper = "0.12"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
